@@ -10,122 +10,151 @@
   const valuesCircleTypes = ["steps", "stepsDist", "hr", "battery", "weather", "sunprogress", "empty", "temperature", "pressure", "altitude"];
   const namesCircleTypes = ["steps", "distance", "heart", "battery", "weather", "sun progress", "empty", "temperature", "pressure", "altitude"];
 
+  const valuesColors = ["", "#ff0000", "#00ff00", "#0000ff", "#ffff00", "#ff00ff", "#00ffff", "#fff", "#000"];
+  const namesColors = ["default", "red", "green", "blue", "yellow", "magenta", "cyan", "white", "black"];
+
   const weatherData = ["humidity", "wind", "empty"];
 
-  E.showMenu({
-    '': { 'title': 'circlesclock' },
-    '< Back': back,
-    'min heartrate': {
-      value: "minHR" in settings ? settings.minHR : 40,
-      min: 0,
-      max : 250,
-      step: 5,
-      format: x => {
-        return x;
+  function showMainMenu() {
+    let menu ={
+      '': { 'title': 'Circles clock' },
+      /*LANG*/'< Back': back,
+      /*LANG*/'circle count': {
+        value: "circleCount" in settings ? settings.circleCount : 3,
+        min: 3,
+        max : 4,
+        step: 1,
+        onchange: x => save('circleCount', x),
       },
-      onchange: x => save('minHR', x),
-    },
-    'max heartrate': {
-      value: "maxHR" in settings ? settings.maxHR : 200,
-      min: 20,
-      max : 250,
-      step: 5,
-      format: x => {
-        return x;
+      /*LANG*/'circle 1': ()=>showCircleMenu(1),
+      /*LANG*/'circle 2': ()=>showCircleMenu(2),
+      /*LANG*/'circle 3': ()=>showCircleMenu(3),
+      /*LANG*/'circle 4': ()=>showCircleMenu(4),
+      /*LANG*/'heartrate': ()=>showHRMenu(),
+      /*LANG*/'steps': ()=>showStepMenu(),
+      /*LANG*/'battery warn': {
+        value: "batteryWarn" in settings ? settings.batteryWarn : 30,
+        min: 10,
+        max : 100,
+        step: 10,
+        format: x => {
+          return x + '%';
+        },
+        onchange: x => save('batteryWarn', x),
       },
-      onchange: x => save('maxHR', x),
-    },
-    'hr confidence': {
-      value: "confidence" in settings ? settings.confidence : 0,
-      min: 0,
-      max : 100,
-      step: 10,
-      format: x => {
-        return x;
+      /*LANG*/'show widgets': {
+        value: "showWidgets" in settings ? settings.showWidgets : false,
+        format: () => (settings.showWidgets ? 'Yes' : 'No'),
+        onchange: x => save('showWidgets', x),
       },
-      onchange: x => save('confidence', x),
-    },
-    'step goal': {
-      value: "stepGoal" in settings ? settings.stepGoal : 10000,
-      min: 2000,
-      max : 50000,
-      step: 2000,
-      format: x => {
-        return x;
+      /*LANG*/'weather circle': {
+        value: settings.weatherCircleData ? weatherData.indexOf(settings.weatherCircleData) : 0,
+        min: 0, max: 2,
+        format: v => weatherData[v],
+        onchange: x => save('weatherCircleData', weatherData[x]),
+      }
+    };
+    E.showMenu(menu);
+  }
+
+  function showHRMenu() {
+    let menu = {
+      '': { 'title': /*LANG*/'Heartrate' },
+      /*LANG*/'< Back': ()=>showMainMenu(),
+      /*LANG*/'minimum bpm': {
+        value: "minHR" in settings ? settings.minHR : 40,
+        min: 0,
+        max : 250,
+        step: 5,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('minHR', x),
       },
-      onchange: x => save('stepGoal', x),
-    },
-    'step length': {
-      value: "stepLength" in settings ? settings.stepLength : 0.8,
-      min: 0.1,
-      max : 1.5,
-      step: 0.01,
-      format: x => {
-        return x;
+      /*LANG*/'maximum bpm': {
+        value: "maxHR" in settings ? settings.maxHR : 200,
+        min: 20,
+        max : 250,
+        step: 5,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('maxHR', x),
       },
-      onchange: x => save('stepLength', x),
-    },
-    'step dist goal': {
-      value: "stepDistanceGoal" in settings ? settings.stepDistanceGoal : 8000,
-      min: 2000,
-      max : 30000,
-      step: 1000,
-      format: x => {
-        return x;
+      /*LANG*/'min. confidence': {
+        value: "confidence" in settings ? settings.confidence : 0,
+        min: 0,
+        max : 100,
+        step: 10,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('confidence', x),
       },
-      onchange: x => save('stepDistanceGoal', x),
-    },
-    'battery warn': {
-      value: "batteryWarn" in settings ? settings.batteryWarn : 30,
-      min: 10,
-      max : 100,
-      step: 10,
-      format: x => {
-        return x + '%';
+    };
+    E.showMenu(menu);
+  }
+
+  function showStepMenu() {
+    let menu = {
+      '': { 'title': /*LANG*/'Steps' },
+      /*LANG*/'< Back': ()=>showMainMenu(),
+      /*LANG*/'goal': {
+        value: "stepGoal" in settings ? settings.stepGoal : 10000,
+        min: 2000,
+        max : 50000,
+        step: 2000,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('stepGoal', x),
       },
-      onchange: x => save('batteryWarn', x),
-    },
-    'show widgets': {
-      value: "showWidgets" in settings ? settings.showWidgets : false,
-      format: () => (settings.showWidgets ? 'Yes' : 'No'),
-      onchange: x => save('showWidgets', x),
-    },
-    'weather circle': {
-      value: settings.weatherCircleData ? weatherData.indexOf(settings.weatherCircleData) : 0,
-      min: 0, max: 2,
-      format: v => weatherData[v],
-      onchange: x => save('weatherCircleData', weatherData[x]),
-    },
-    'circle count': {
-      value: "circleCount" in settings ? settings.circleCount : 3,
-      min: 3,
-      max : 4,
-      step: 1,
-      onchange: x => save('circleCount', x),
-    },
-    'circle1': {
-      value: settings.circle1 ? valuesCircleTypes.indexOf(settings.circle1) : 0,
-      min: 0, max: valuesCircleTypes.length,
-      format: v => namesCircleTypes[v],
-      onchange: x => save('circle1', valuesCircleTypes[x]),
-    },
-    'circle2': {
-      value: settings.circle2 ? valuesCircleTypes.indexOf(settings.circle2) : 2,
-      min: 0, max: valuesCircleTypes.length,
-      format: v => namesCircleTypes[v],
-      onchange: x => save('circle2', valuesCircleTypes[x]),
-    },
-    'circle3': {
-      value: settings.circle3 ? valuesCircleTypes.indexOf(settings.circle3) : 3,
-      min: 0, max: valuesCircleTypes.length,
-      format: v => namesCircleTypes[v],
-      onchange: x => save('circle3', valuesCircleTypes[x]),
-    },
-    'circle4': {
-      value: settings.circle4 ? valuesCircleTypes.indexOf(settings.circle4) : 4,
-      min: 0, max: valuesCircleTypes.length,
-      format: v => namesCircleTypes[v],
-      onchange: x => save('circle4', valuesCircleTypes[x]),
-    }
-  });
+      /*LANG*/'distance goal': {
+        value: "stepDistanceGoal" in settings ? settings.stepDistanceGoal : 8000,
+        min: 2000,
+        max : 30000,
+        step: 1000,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('stepDistanceGoal', x),
+      },
+      /*LANG*/'step length': {
+        value: "stepLength" in settings ? settings.stepLength : 0.8,
+        min: 0.1,
+        max : 1.5,
+        step: 0.01,
+        format: x => {
+          return x;
+        },
+        onchange: x => save('stepLength', x),
+      }
+    };
+    E.showMenu(menu);
+  }
+
+  function showCircleMenu(circleId) {
+    String circleName = "circle" + circleId;
+    String colorKey = circleName + "color";
+    let menu = {
+      '': { 'title': /*LANG*/'Circle ' + circleId },
+      /*LANG*/'< Back': ()=>showMainMenu(),
+      /*LANG*/'data': {
+        value: settings[circleName] ? valuesCircleTypes.indexOf(settings[circleName]) : 0,
+        min: 0, max: valuesCircleTypes.length,
+        format: v => namesCircleTypes[v],
+        onchange: x => save(circleName, valuesCircleTypes[x]),
+      },
+      /*LANG*/'color': {
+        value: settings[colorKey] ? valuesColors.indexOf(settings[colorKey]) : 0,
+        min: 0, max: valuesColors.length,
+        format: v => namesColors[v],
+        onchange: x => save(colorKey, valuesColors[x]),
+      },
+    };
+    E.showMenu(menu);
+  }
+
+
+  showMainMenu();
 });
