@@ -15,3 +15,5 @@
 0.08: Allow configuration of up to 4 circles in a row
 0.09: Support to show temperature, air pressure or altitude from internal pressure sensor
       Fix sunprogress calculation during night
+      Refactor settings menu
+      Colors of circles can be configured
